Cleaned up followers page views

--- a/mobile/www/app/shared/user/users.html
+++ b/mobile/www/app/shared/user/users.html
@@ -7,5 +7,6 @@
         <button class="button button-small button-outline button-positive pull-right" ng-if="!user.you" ng-click="followUser(user)">
             <span ng-class="user.friend ? 'ion-minus' : 'ion-plus'"></span>
         </button>
+        <i class="icon ion-chevron-right icon-accessory"></i>
     </div>
 </div>
