--- a/mobile/www/app/shared/user/users.html
+++ b/mobile/www/app/shared/user/users.html
@@ -1,12 +1,13 @@
-<div class="item-remove-animate item-avatar item-icon-right">
-    <img ng-src="{{ user.avatarURL }}" />
+<ion-item class="item-remove-animate item-avatar item-icon-right" ui-sref="profile({ username: vm.user.username })">
+    <!--<tatami-user user="user"></tatami-user>-->
+    <img ng-src="{{ vm.user.avatarURL }}" />
 
     <div class="profile-name">
-        <h2 class="inline">{{ user.firstName }} {{ user.lastName }}</h2>
-        <span class="inline subheading">@{{ user.username }}</span>
-        <button class="button button-small button-outline button-positive pull-right" ng-if="!user.you" ng-click="followUser(user)">
-            <span ng-class="user.friend ? 'ion-minus' : 'ion-plus'"></span>
+        <h2 class="inline">{{ vm.user.firstName }} {{ vm.user.lastName }}</h2>
+        <span class="inline subheading">@{{ vm.user.username }}</span>
+        <button class="button button-small button-outline button-positive pull-right" ng-if="!vm.user.you" ng-click="vm.followUser(user)">
+            <span ng-class="vm.user.friend ? 'ion-minus' : 'ion-plus'"></span>
         </button>
         <i class="icon ion-chevron-right icon-accessory"></i>
     </div>
-</div>
+</ion-item>
