Including new javascript files

--- a/mobile/www/index.html
+++ b/mobile/www/index.html
@@ -27,6 +27,7 @@
         <script src="app/components/timeline/timeline.service.js"></script>
         <script src="app/components/timeline/tab.timeline.controller.js"></script>
         <script src="app/components/timeline/timeline.detail.controller.js"></script>
+        <script src="app/shared/status/status.directive.js"></script>
         <script src="app/components/mentions/mentions.js"></script>
         <script src="app/components/mentions/mentions.service.js"></script>
         <script src="app/components/mentions/mentions.controller.js"></script>
@@ -44,10 +45,12 @@
         <script src="app/components/follow/follower/follower.controller.js"></script>
         <script src="app/components/follow/following/following.js"></script>
         <script src="app/components/follow/following/following.controller.js"></script>
-        <script src="app/shared/user/user.directive.js"></script>
+        <script src="app/shared/user/users.directive.js"></script>
         <script src="app/components/post/post.js"></script>
         <script src="app/components/post/post.controller.js"></script>
         <script src="app/shared/services/StatusService.js"></script>
+        <script src="app/components/profile/profile.js"></script>
+        <script src="app/components/profile/profile.controller.js"></script>
     </head>
     <body ng-app="tatami">
         <!--
