added the Tatami login User Interface

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -18,18 +18,27 @@
         <link rel="stylesheet" href="assets/styles/main.css">
         <!-- endbuild -->
         <link rel="stylesheet" href="assets/styles/tatami.css">
+        <style>
+            body{
+                background-image: url(assets/styles/img/wallpaper.jpg);
+            }
+
+        </style>
+
     </head>
     <body ng-app="tatamiJHipsterApp">
         <!--[if lt IE 9]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
+       <!-- <div ng-show="{{ENV === 'dev'}}" class="development" ng-cloak=""></div> -->
+
         <div ui-view="navbar" ng-cloak=""></div>
         <div class="container">
             <div ui-view="content"></div>
 
-            <div class="footer">
-                <p translate="footer">This is your footer</p>
+            <div ng-if="!$state.includes('tatami.home')" style="opacity: 0.5; text-align:center;">
+                Version: <pom>version</pom>, Build: <pom>build</pom>
             </div>
         </div>
 
