bootstrap grid fix

--- a/src/main/webapp/scripts/app/about/license/license.html
+++ b/src/main/webapp/scripts/app/about/license/license.html
@@ -1,4 +1,4 @@
-<div class="col-offset-2 col-span-8">
+<div class="col-offset-2 col-lg-8">
     <h1 translate="about.license.title"></h1>
     <p>
         <span translate="about.license.copyright"></span>&copy;<ins id="endYear"> 2012 </ins>
