--- a/src/main/webapp/scripts/app/about/presentation/presentation.html
+++ b/src/main/webapp/scripts/app/about/presentation/presentation.html
@@ -1,12 +1,12 @@
 <div class="row">
-    <div class="offset2 span8">
+    <div class="col-offset-2 col-lg-8">
         <h1 translate="about.presentation.title"></h1>
         <br><br>
     </div>
 </div>
 <div class="row">
-    <div class="col-span-4"><img src="/assets/images/presentation_tatami.jpg" width="400" height="267" title="Tatami"></div>
-    <div class="col-span-8">
+    <div class="col-lg-4"><img src="/assets/images/presentation_tatami.jpg" width="400" height="267" title="Tatami"></div>
+    <div class="col-lg-8">
         <br>
         <p>
         <h2 translate="about.presentation.row1.title"></h2>
@@ -25,7 +25,7 @@
     </div>
 </div>
 <div class="row">
-    <div class="col-span-8">
+    <div class="col-lg-8">
         <br>
         <br>
         <br>
@@ -38,14 +38,14 @@
             <li translate="about.presentation.row2.line3"></li>
         </ul>
     </div>
-    <div class="col-span-4"><img src="/assets/images/presentation_devices.jpg" width="200" height="267" title="{{ 'tatami.about.presentation.devices' | translate }}"></div>
+    <div class="col-lg-4"><img src="/assets/images/presentation_devices.jpg" width="200" height="267" title="{{ 'about.presentation.devices' | translate }}"></div>
 </div>
 <div class="row">
     <br>
     <br>
     <br>
-    <div class="col-span-6"><img src="/assets/images/presentation_opensource.jpg" width="250" height="216" title="{{ 'tatami.about.presentation.openSource' | translate }}"></div>
-    <div class="col-span-6">
+    <div class="col-lg-8"><img src="/assets/images/presentation_opensource.jpg" width="250" height="216" title="{{ 'about.presentation.openSource' | translate }}"></div>
+    <div class="col-lg-4">
         <p>
         <h2 translate="about.presentation.row3.title"></h2>
         </p>
@@ -67,23 +67,23 @@
 <br>
 <br>
 <div class="row">
-    <div class="col-span-8">
+    <div class="col-lg-8">
         <p>
         <h2 translate="about.presentation.row4.title"></h2>
         </p>
         <ul>
             <li>
                 <span translate="about.presentation.row4.line1"></span>
-                <a href="https://tatami.ippon.fr">https://tatami.ippon.fr</a>
+                <a href="https://ippon.fr">https://ippon.fr</a>
             </li>
             <li translate="about.presentation.row4.line2"></li>
             <li translate="about.presentation.row4.line3"></li>
         </ul>
     </div>
-    <div class="col-span-4"><img src="/assets/images/company-logo-bookmark.png" width="150" height="148" title="{{ 'tatami.menu.logo' | translate }}"></div>
+    <div class="col-lg-4"><img src="/assets/images/company-logo-bookmark.png" width="150" height="55" title="{{ 'menu.logo' | translate }}"></div>
 </div>
 <div class="row">
-    <div class="col-span-12">
+    <div class="col-lg-12">
         <p>
         <h2 translate="about.presentation.row5.title"></h2>
         </p>
