Starting to create user detail view

--- a/mobile/www/app/shared/status/status.html
+++ b/mobile/www/app/shared/status/status.html
@@ -1,5 +1,6 @@
-    <ion-item class="item-remove-animate item-avatar item-icon-right" type="item-text-wrap" ui-sref="tab.timeline-detail({ lineItemId : vm.status.timelineId })">
-    <img ng-src="{{ vm.status.avatarURL }}" />
+<ion-item class="item-remove-animate item-avatar item-icon-right" type="item-text-wrap"
+          ui-sref="tab.timeline-detail({ lineItemId : vm.status.timelineId })">
+    <img ng-src="{{ vm.status.avatarURL }}"/>
 
     <div class="profile-name">
         <h2 class="inline">{{vm.status.firstName}} {{vm.status.lastName}}</h2>
