--- a/mobile/www/index.html
+++ b/mobile/www/index.html
@@ -46,6 +46,7 @@
         <script src="app/components/follow/following/following.js"></script>
         <script src="app/components/follow/following/following.controller.js"></script>
         <script src="app/shared/user/users.directive.js"></script>
+        <script src="app/shared/user/user.detail.directive.js"></script>
         <script src="app/components/post/post.js"></script>
         <script src="app/components/post/post.controller.js"></script>
         <script src="app/shared/services/StatusService.js"></script>
