--- a/mobile/www/app/shared/user/user-detail.html
+++ b/mobile/www/app/shared/user/user-detail.html
@@ -1,6 +1,6 @@
 <ion-item>
     <div class="row">
-        <div class="col-offset-33 col-33 col-center">
+        <div class="col-offset-20 col-40">
             <img ng-src="{{ vm.user.avatarURL }}" class="img-rounded" >
         </div>
     </div>
