include tatami constants

--- a/mobile/www/index.html
+++ b/mobile/www/index.html
@@ -8,9 +8,8 @@
         <link href="lib/ionic/css/ionic.min.css" rel="stylesheet">
         <link href="css/style.min.css" rel="stylesheet">
 
-        <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
+    <!-- compiled css output -->
         <link href="css/ionic.app.css" rel="stylesheet">
-        -->
 
         <!-- ionic/angularjs js -->
         <script src="lib/ionic/js/ionic.bundle.js"></script>
@@ -21,6 +20,7 @@
 
         <!-- your app's js -->
         <script src="app/tatamiApp.js"></script>
+        <script src="app/tatamiApp.constants.js"></script>
         <script src="app/components/login/login.js"></script>
         <script src="app/components/login/login.controller.js"></script>
         <script src="app/components/timeline/timeline.js"></script>
