Add a more tab, which currently will let the user logout

--- a/mobile/www/app/tabs.html
+++ b/mobile/www/app/tabs.html
@@ -15,5 +15,9 @@
         <ion-nav-view name="tab-favorites"></ion-nav-view>
     </ion-tab>
 
+    <ion-tab title="More"  icon-off="ion-navicon-round" icon-on="ion-navicon-round" ui-sref="tab.more">
+        <ion-nav-view name="tab-more"></ion-nav-view>
+    </ion-tab>
+
 
 </ion-tabs>
