--- a/mobile/www/index.html
+++ b/mobile/www/index.html
@@ -32,6 +32,8 @@
         <script src="app/components/mentions/mentions.service.js"></script>
         <script src="app/components/mentions/mentions.controller.js"></script>
         <script src="app/components/mentions/mentions.detail.controller.js"></script>
+        <script src="app/components/more/more.js"></script>
+        <script src="app/components/more/more.controller.js"></script>
         <script src="app/shared/services/ProfileService.js"></script>
         <script src="app/shared/services/UserService.js"></script>
         <script src="app/components/favorites/favorites.js"></script>
