--- a/mobile/www/index.html
+++ b/mobile/www/index.html
@@ -36,6 +36,7 @@
         <script src="app/components/more/more.controller.js"></script>
         <script src="app/shared/services/ProfileService.js"></script>
         <script src="app/shared/services/UserService.js"></script>
+        <script src="app/shared/services/login.service.js"></script>
         <script src="app/components/favorites/favorites.js"></script>
         <script src="app/components/favorites/favorites.service.js"></script>
         <script src="app/components/favorites/favorites.controller.js"></script>
