--- a/mobile/www/index.html
+++ b/mobile/www/index.html
@@ -37,6 +37,7 @@
         <script src="app/shared/services/ProfileService.js"></script>
         <script src="app/shared/services/UserService.js"></script>
         <script src="app/shared/services/login.service.js"></script>
+        <script src="app/shared/services/path.service.js"></script>
         <script src="app/components/favorites/favorites.js"></script>
         <script src="app/components/favorites/favorites.service.js"></script>
         <script src="app/components/favorites/favorites.controller.js"></script>
