UserService needs to use PathService to retrieve a users avatar

--- a/mobile/www/app/shared/user/user.html
+++ b/mobile/www/app/shared/user/user.html
@@ -1,4 +1,4 @@
-<ion-item class="item-remove-animate item-avatar item-icon-right">
+<ion-item class="item-remove-animate item-avatar item-icon-right" ui-sref="profile({ username : vm.user.username })">
     <img ng-src="{{ vm.user.avatarURL }}" />
 
     <div class="profile-name">
