Updated included scripts

--- a/mobile/www/index.html
+++ b/mobile/www/index.html
@@ -27,7 +27,7 @@
         <script src="app/components/home/home.js"></script>
         <script src="app/components/home/timeline/timeline.js"></script>
         <script src="app/components/home/timeline/timeline.service.js"></script>
-        <script src="app/components/home/timeline/tab.timeline.controller.js"></script>
+        <script src="app/components/home/timeline/timeline.controller.js"></script>
         <script src="app/components/home/timeline/timeline.detail.controller.js"></script>
         <script src="app/components/home/mentions/mentions.js"></script>
         <script src="app/components/home/mentions/mentions.service.js"></script>
@@ -79,7 +79,7 @@
                     </a>
                 </div>
                 <div class="title">
-                    <a ui-sref="tab.timeline" style="text-decoration: none">
+                    <a ui-sref="timeline" style="text-decoration: none">
                         <img class="title-image" src="img/logo.png" />
                         Tatami
                     </a>
