Added conversation state to see a status

--- a/mobile/www/index.html
+++ b/mobile/www/index.html
@@ -24,6 +24,9 @@
         <script src="app/components/login/login.js"></script>
         <script src="app/components/login/login.controller.js"></script>
 
+        <script src="app/components/conversation/conversation.js"></script>
+        <script src="app/components/conversation/conversation.controller.js"></script>
+
         <script src="app/components/home/home.js"></script>
         <script src="app/components/home/timeline/timeline.js"></script>
         <script src="app/components/home/timeline/timeline.service.js"></script>
