Clicking sends the user to the conversation state

--- a/mobile/www/app/shared/status/status.html
+++ b/mobile/www/app/shared/status/status.html
@@ -1,5 +1,5 @@
 <ion-item class="item-remove-animate item-avatar item-icon-right" type="item-text-wrap"
-          ui-sref="tab.timeline-detail({ lineItemId : vm.status.timelineId })">
+          ui-sref="conversation({ statusId : vm.status.timelineId })">
     <img ng-src="{{ vm.status.avatarURL }}"/>
 
     <div class="profile-name">
