--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -150,6 +150,7 @@
     <script src="scripts/components/auth/provider/auth.xauth.service.js"></script>
     <!-- endbuild -->
 
-    <script src="scripts/app/about/about.js"></script>
+        <script src="scripts/app/about/about.js"></script>
+        <script src="scripts/app/account/profile/profile.js"></script>
 </body>
 </html>
