Profile state now has tatami as parent state

--- a/mobile/www/index.html
+++ b/mobile/www/index.html
@@ -77,7 +77,7 @@
             <ion-nav-back-button></ion-nav-back-button>
             <div class="bar bar-header bar-dark">
                 <div class="buttons">
-                    <a ui-sref="follow.suggested">
+                    <a ui-sref="suggested">
                         <button class="button button-clear ion-android-person-add"></button>
                     </a>
                 </div>
