--- a/src/main/webapp/scripts/app/account/login/login.html
+++ b/src/main/webapp/scripts/app/account/login/login.html
@@ -144,9 +144,9 @@
             </ul>
             <form ng-submit="registerUser()" accept-charset="utf-8" id="registrationForm">
                 <fieldset>
-                    <div class="form-group">
+                   <!-- <div class="form-group">
                         <input ng-model="user.email" name="email" type="email" required="required" placeholder="{{ 'login.form.email' | translate }}">
-                    </div>
+                    </div>-->
                     <div class="form-group">
                         <button type="submit" id="registrationButton" class="btn btn-primary btn-block text-center" translate="login.register.title"></button>
                     </div>
