--- a/src/main/webapp/scripts/app/account/account.html
+++ b/src/main/webapp/scripts/app/account/account.html
@@ -5,7 +5,7 @@
             <!-- The nagivation sidebar -->
             <div id="navigation">
                 <div>
-                    <div class="col-span-4 alert">
+                    <div class="col-lg-4 alert">
                         <div id="avatar">
                             <div class="row text-center nomargin avatar-float-center-container">
                                 <div>
@@ -13,10 +13,10 @@
                                 </div>
                                 <br>
                                 <div>
-                                    <a ui-sref="tatami.home.profile.statuses({ username: profile.username })">
+                                    <a ui-sref="home.profile.statuses({ username: profile.username })">
                                         <h3 class="user-profile">{{ profile.firstName + ' ' + profile.lastName }}</h3>
                                     </a>
-                                    <a ui-sref="tatami.home.profile.statuses({ username: profile.username })">
+                                    <a ui-sref="home.profile.statuses({ username: profile.username })">
                                         <p>@{{ profile.username }}</p>
                                     </a>
                                 </div>
@@ -25,51 +25,51 @@
                         <div class="tabbable alert alert-status">
                             <ul class="adminMenu nav nav-pills nav-stacked nomargin">
                                 <li ui-sref-active="active">
-                                    <a ui-sref="tatami.account.profile">
+                                    <a ui-sref="account.profile">
                                         <span class="glyphicon glyphicon-user"></span>
-                                        <span translate="tatami.account.profile.title"></span>
+                                        <span translate="account.profile.title"></span>
                                     </a>
                                 </li>
                                 <li ui-sref-active="active">
-                                    <a ui-sref="tatami.account.preferences">
+                                    <a ui-sref="account.preferences">
                                         <span class="glyphicon glyphicon-cog"></span>
-                                        <span translate="tatami.account.preferences.title"></span>
+                                        <span translate="account.preferences.title"></span>
                                     </a>
                                 </li>
                                 <li ui-sref-active="active">
-                                    <a ui-sref="tatami.account.password">
+                                    <a ui-sref="account.password">
                                         <span class="glyphicon glyphicon-lock"></span>
-                                        <span translate="tatami.account.password.title"></span>
+                                        <span translate="account.password.title"></span>
                                     </a>
                                 </li>
                                 <li ui-sref-active="active">
-                                    <a ui-sref="tatami.account.files">
+                                    <a ui-sref="account.files">
                                         <span class="glyphicon glyphicon-file"></span>
-                                        <span translate="tatami.account.files.title"></span>
+                                        <span translate="account.files.title"></span>
                                     </a>
                                 </li>
-                                <li ng-class="{ 'active': $state.current.name.indexOf('tatami.account.users') != -1 }">
-                                    <a ui-sref="tatami.account.users">
+                                <li ng-class="{ 'active': $state.current.name.indexOf('account.users') != -1 }">
+                                    <a ui-sref="account.users">
                                         <span class="glyphicon glyphicon-globe"></span>
-                                        <span translate="tatami.account.users.title"></span>
+                                        <span translate="account.users.title"></span>
                                     </a>
                                 </li>
-                                <li ng-class="{ 'active': $state.current.name.indexOf('tatami.account.groups') != -1 }">
-                                    <a ui-sref="tatami.account.groups">
+                                <li ng-class="{ 'active': $state.current.name.indexOf('account.groups') != -1 }">
+                                    <a ui-sref="account.groups">
                                         <span class="glyphicon glyphicon-th-large"></span>
-                                        <span translate="tatami.account.groups.title"></span>
+                                        <span translate="account.groups.title"></span>
                                     </a>
                                 </li>
-                                <li ng-class="{ 'active': $state.current.name.indexOf('tatami.account.tags') != -1 }">
-                                    <a ui-sref="tatami.account.tags">
+                                <li ng-class="{ 'active': $state.current.name.indexOf('account.tags') != -1 }">
+                                    <a ui-sref="account.tags">
                                         <span class="glyphicon glyphicon-tags"></span>
-                                        <span translate="tatami.account.tags.title"></span>
+                                        <span translate="account.tags.title"></span>
                                     </a>
                                 </li>
                                 <li ui-sref-active="active">
-                                    <a ui-sref="tatami.account.topPosters">
+                                    <a ui-sref="account.topPosters">
                                         <span class="glyphicon glyphicon-signal"></span>
-                                        <span translate="tatami.account.topPosters.title"></span>
+                                        <span translate="account.topPosters.title"></span>
                                     </a>
                                 </li>
                             </ul>
