--- a/src/main/webapp/scripts/app/account/account.html
+++ b/src/main/webapp/scripts/app/account/account.html
@@ -6,6 +6,7 @@
             <div id="navigation">
                 <div>
                     <div class="col-lg-4 alert">
+                        <div class= well>
                         <div id="avatar">
                             <div class="row text-center nomargin avatar-float-center-container">
                                 <div>
@@ -22,6 +23,8 @@
                                 </div>
                             </div>
                         </div>
+
+
                         <div class="tabbable alert alert-status">
                             <ul class="adminMenu nav nav-pills nav-stacked nomargin">
                                 <li ui-sref-active="active">
@@ -73,6 +76,7 @@
                                     </a>
                                 </li>
                             </ul>
+                        </div>
                         </div>
                     </div>
                 </div>
