--- a/src/main/webapp/scripts/app/account/profile/profile.html
+++ b/src/main/webapp/scripts/app/account/profile/profile.html
@@ -1,6 +1,6 @@
 <div class="col-lg-8">
     <div class="alert alert-status">
-        <div>
+        <div class = well>
             <form>
                 <h2 translate="account.profile.title"></h2>
                 <fieldset class="form-horizontal row-fluid">
@@ -28,9 +28,10 @@
                         </div>
                     </div>
                     <div class="control-group">
-                        <label class="control-label" for="firstName" translate="account.profile.firstName">
-                        </label>
+
                         <div class="controls">
+                            <label class="control-label" for="firstName" translate="account.profile.firstName">
+                            </label>
                             <input name="firstName" type="text" size="15" maxlength="40" class="input-xlarge col-lg-12" ng-model="userProfile.firstName">
                         </div>
                     </div>
