--- a/src/main/webapp/scripts/app/account/profile/profile.html
+++ b/src/main/webapp/scripts/app/account/profile/profile.html
@@ -54,7 +54,7 @@
                     </div>
                     <div class="return"></div>
                     <div class="form-actions">
-                        <button type="submit" class="input-xlarge btn btn-primary btn-block" translate="form.save" ng-click="updateUser()"></button>
+                        <button type="submit" class="input-xlarge btn btn-primary btn-block" translate="account.form.save" ng-click="updateUser()"></button>
                     </div>
                 </fieldset>
             </form>
