Created a new directory for the login page seperate from account with activate,password,register and reset

--- a/src/main/resources/mails/activationEmail.html
+++ b/src/main/resources/mails/activationEmail.html
@@ -12,7 +12,7 @@
             Your JHipster account has been created, please click on the URL below to activate it:
         </p>
         <p>
-            <a th:href="@{|${baseUrl}/#/activate?key=${user.activationKey}|}"
+            <a th:href="@{|${baseUrl}/#/login/activate?key=${user.activationKey}|}"
                th:text="|${user.login}|">Activation Link</a>
         </p>
         <p>
