--- a/src/main/resources/mails/passwordResetEmail.html
+++ b/src/main/resources/mails/passwordResetEmail.html
@@ -12,7 +12,7 @@
             For your JHipster account a password reset was requested, please click on the URL below to reset it:
         </p>
         <p>
-            <a th:href="@{|${baseUrl}/#/reset/finish?key=${user.resetKey}|}"
+            <a th:href="@{|${baseUrl}/#/login/reset/finish?key=${user.resetKey}|}"
                th:text="|${user.login}|">Reset Link</a>
         </p>
         <p>
