--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -114,21 +114,21 @@
     <script src="scripts/components/util/data-util.service.js"></script>
     <script src="scripts/components/util/sort.directive.js"></script>
     <script src="scripts/app/account/account.js"></script>
-    <script src="scripts/app/account/activate/activate.js"></script>
-    <script src="scripts/app/account/activate/activate.controller.js"></script>
-    <script src="scripts/app/account/login/login.js"></script>
-    <script src="scripts/app/account/login/login.controller.js"></script>
-    <script src="scripts/app/account/password/password.js"></script>
-    <script src="scripts/app/account/password/password.controller.js"></script>
-    <script src="scripts/app/account/password/password.directive.js"></script>
-    <script src="scripts/app/account/register/register.js"></script>
-    <script src="scripts/app/account/register/register.controller.js"></script>
+    <script src="scripts/app/login/activate/activate.js"></script>
+    <script src="scripts/app/login/activate/activate.controller.js"></script>
+    <script src="scripts/app/login/login.js"></script>
+    <script src="scripts/app/login/login.controller.js"></script>
+    <script src="scripts/app/login/password/password.js"></script>
+    <script src="scripts/app/login/password/password.controller.js"></script>
+    <script src="scripts/app/login/password/password.directive.js"></script>
+    <script src="scripts/app/login/register/register.js"></script>
+    <script src="scripts/app/login/register/register.controller.js"></script>
     <script src="scripts/app/account/settings/settings.js"></script>
     <script src="scripts/app/account/settings/settings.controller.js"></script>
-    <script src="scripts/app/account/reset/finish/reset.finish.controller.js"></script>
-    <script src="scripts/app/account/reset/finish/reset.finish.js"></script>
-    <script src="scripts/app/account/reset/request/reset.request.controller.js"></script>
-    <script src="scripts/app/account/reset/request/reset.request.js"></script>
+    <script src="scripts/app/login/reset/finish/reset.finish.controller.js"></script>
+    <script src="scripts/app/login/reset/finish/reset.finish.js"></script>
+    <script src="scripts/app/login/reset/request/reset.request.controller.js"></script>
+    <script src="scripts/app/login/reset/request/reset.request.js"></script>
     <script src="scripts/app/admin/admin.js"></script>
     <script src="scripts/app/admin/audits/audits.js"></script>
     <script src="scripts/app/admin/audits/audits.controller.js"></script>
