--- a/mobile/www/app/shared/status/status.html
+++ b/mobile/www/app/shared/status/status.html
@@ -1,5 +1,4 @@
-<ion-item>
-    <div class="list list-inset item-remove-animate item-icon-right"
+<ion-item class="list list-inset item-remove-animate item-icon-right"
          type="item-text-wrap"
          ui-sref="conversation({ statusId : vm.status.timelineId })">
         <div class="item-avatar">
@@ -14,13 +13,10 @@
         </div>
 
         <i class="icon ion-chevron-right icon-accessory"></i>
-        <p class="row">
+        <div class="row">
             <div class="col-25 button button-clear ion-chatbox"></div>
             <div class="col-25 button button-clear ion-star" ng-click="vm.favorite()" ng-class="{ 'button-energized': vm.status.favorite }"></div>
             <div class="col-25 button button-clear ion-trash-a" ng-if="vm.isCurrentUser" ng-click="vm.remove()"></div>
             <div class="col-25 button button-clear ion-share" ng-if="!vm.isCurrentUser"></div>
-        </p>
-    </div>
-
-
+        </div>
 </ion-item>
