Display message stating that the post is a reply

--- a/mobile/www/app/shared/status/status.html
+++ b/mobile/www/app/shared/status/status.html
@@ -1,4 +1,5 @@
-<ion-item class="list list-inset item-remove-animate item-icon-right"
+<ion-item>
+    <div class="list list-inset item-remove-animate item-icon-right"
          type="item-text-wrap"
          ui-sref="conversation({ statusId : vm.status.timelineId })">
         <div class="item-avatar">
@@ -9,14 +10,22 @@
                 <span class="inline subheading">{{vm.status.username}}</span>
                 <span class="inline date">&nbsp;&#183; {{vm.status.prettyPrintStatusDate}}</span>
             </div>
+
             <p>{{vm.status.content}}</p>
+            <p ng-if="vm.status.replyToUsername">
+                <span class="ios-android-share"></span>
+                <span>In reply to </span>
+                <a>@{{ vm.status.replyToUsername }}</a>
+            </p>
+
         </div>
 
         <i class="icon ion-chevron-right icon-accessory"></i>
-        <div class="row">
-            <div class="col-25 button button-clear ion-chatbox"></div>
-            <div class="col-25 button button-clear ion-star" ng-click="vm.favorite()" ng-class="{ 'button-energized': vm.status.favorite }"></div>
-            <div class="col-25 button button-clear ion-trash-a" ng-if="vm.isCurrentUser" ng-click="vm.remove()"></div>
-            <div class="col-25 button button-clear ion-share" ng-if="!vm.isCurrentUser"></div>
-        </div>
+    </div>
+    <div class="row">
+        <div class="col-25 button button-clear ion-chatbox" ng-click="vm.postReply()"></div>
+        <div class="col-25 button button-clear ion-star" ng-click="vm.favorite()" ng-class="{ 'button-energized': vm.status.favorite }"></div>
+        <div class="col-25 button button-clear ion-trash-a" ng-if="vm.isCurrentUser" ng-click="vm.remove()"></div>
+        <div class="col-25 button button-clear ion-share" ng-if="!vm.isCurrentUser"></div>
+    </div>
 </ion-item>
