Added template and directive for a conversation

--- a/mobile/www/index.html
+++ b/mobile/www/index.html
@@ -66,6 +66,7 @@
         <script src="app/shared/services/path.service.js"></script>
 
         <script src="app/shared/status/status.directive.js"></script>
+        <script src="app/shared/conversation/conversation.directive.js"></script>
         <script src="app/shared/user/user.directive.js"></script>
         <script src="app/shared/user/user.detail.directive.js"></script>
     </head>
