Renamed and included details templates

--- a/mobile/www/index.html
+++ b/mobile/www/index.html
@@ -31,7 +31,7 @@
         <script src="app/components/home/timeline/timeline.js"></script>
         <script src="app/components/home/timeline/timeline.service.js"></script>
         <script src="app/components/home/timeline/timeline.controller.js"></script>
-        <script src="app/components/home/timeline/timeline.detail.controller.js"></script>
+        <script src="app/components/home/timeline/detail.controller.js"></script>
         <script src="app/components/home/mentions/mentions.js"></script>
         <script src="app/components/home/mentions/mentions.service.js"></script>
         <script src="app/components/home/mentions/mentions.controller.js"></script>
