--- a/mobile/www/app/shared/status/status.html
+++ b/mobile/www/app/shared/status/status.html
@@ -1,4 +1,4 @@
-<ion-item>
+<span>
     <div class="list list-inset item-remove-animate item-icon-right"
          type="item-text-wrap"
          ng-click="vm.goToConversation(vm.status.statusId)">
@@ -28,4 +28,4 @@
         <div class="col-25 button button-clear ion-trash-a" ng-if="vm.isCurrentUser" ng-click="vm.remove()"></div>
         <div class="col-25 button button-clear ion-share" ng-if="!vm.isCurrentUser"></div>
     </div>
-</ion-item>
+</span>
