well within a well

--- a/src/main/webapp/scripts/app/account/account.html
+++ b/src/main/webapp/scripts/app/account/account.html
@@ -24,7 +24,7 @@
                             </div>
                         </div>
 
-
+                            <div class= well>
                         <div class="tabbable alert alert-status">
                             <ul class="adminMenu nav nav-pills nav-stacked nomargin">
                                 <li ui-sref-active="active">
@@ -77,6 +77,7 @@
                                 </li>
                             </ul>
                         </div>
+                            </div>
                         </div>
                     </div>
                 </div>
