Re-added tatami.css to index.html

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -16,6 +16,7 @@
         <!-- endbuild -->
         <!-- build:css assets/styles/main.css -->
         <link rel="stylesheet" href="assets/styles/main.css">
+        <link rel="stylesheet" href="assets/styles/tatami.css">
         <!-- endbuild -->
 
         <style>
