--- a/mobile/www/index.html
+++ b/mobile/www/index.html
@@ -65,33 +65,12 @@
         <script src="app/shared/conversation/conversation.directive.js"></script>
         <script src="app/shared/user/user.directive.js"></script>
         <script src="app/shared/user/user.detail.directive.js"></script>
+        <script src="app/components/post/postbar.directive.js"></script>
     </head>
     <body ng-app="tatami">
         <!--
           The nav bar that will be updated as we navigate between views.
         -->
-        <ion-nav-bar align-title="center" class="bar-subheader bar-stable">
-            <ion-nav-back-button></ion-nav-back-button>
-            <div class="bar bar-header bar-dark">
-                <div class="buttons">
-                    <a ui-sref="suggested">
-                        <button class="button button-clear ion-android-person-add"></button>
-                    </a>
-                </div>
-                <div class="title">
-                    <a ui-sref="timeline" style="text-decoration: none">
-                        <img class="title-image" src="img/logo.png" />
-                        Tatami
-                    </a>
-                </div>
-                <div class="buttons">
-                    <a ui-sref="post">
-                        <button class="button button-clear ion-android-create"></button>
-                    </a>
-                </div>
-            </div>
-        </ion-nav-bar>
-
         <ion-nav-view></ion-nav-view>
     </body>
 </html>
