--- a/src/main/webapp/scripts/app/account/account.html
+++ b/src/main/webapp/scripts/app/account/account.html
@@ -5,8 +5,8 @@
             <!-- The nagivation sidebar -->
             <div id="navigation">
                 <div>
-                    <div class="col-lg-4 alert">
-                        <div class= well>
+                    <div class="col-span-4 alert">
+
                             <div id="avatar">
                                 <div class="row text-center nomargin avatar-float-center-container">
                                     <div>
@@ -24,7 +24,7 @@
                                 </div>
                             </div>
 
-                            <div class= well>
+
                             <div class="tabbable alert alert-status">
                                 <ul class="adminMenu nav nav-pills nav-stacked nomargin">
                                     <li ui-sref-active="active">
@@ -77,8 +77,8 @@
                                     </li>
                                 </ul>
                             </div>
-                                </div>
-                        </div>
+                                
+
                     </div>
                 </div>
             </div>
