--- a/src/main/webapp/scripts/app/account/profile/profile.html
+++ b/src/main/webapp/scripts/app/account/profile/profile.html
@@ -1,6 +1,6 @@
-<div class="col-lg-8">
+<div class="col-span-8">
     <div class="alert alert-status">
-        <div class = well>
+
             <form>
                 <h2 translate="account.profile.title"></h2>
                 <fieldset class="form-horizontal row-fluid">
@@ -24,33 +24,33 @@
                     <div class="control-group">
                         <label class="control-label" for="login" translate="account.profile.email"></label>
                         <div class="controls">
-                            <input name="login" type="text" disabled="true" class="col-lg-12" ng-model="userLogin">
+                            <input name="login" type="text" disabled="true" class="col-span-12" ng-model="userLogin">
                         </div>
                     </div>
                     <div class="control-group">
-
+                        <label class="control-label" for="firstName" translate="account.profile.firstName">
+                        </label>
                         <div class="controls">
-                            <label class="control-label" for="firstName" translate="account.profile.firstName">
-                            </label>
-                            <input name="firstName" type="text" size="15" maxlength="40" class="input-xlarge col-lg-12" ng-model="userProfile.firstName">
+
+                            <input name="firstName" type="text" size="15" maxlength="40" class="input-xlarge col-span-12" ng-model="userProfile.firstName">
                         </div>
                     </div>
                     <div class="control-group">
                         <label class="control-label" for="lastName" translate="account.profile.lastName"></label>
                         <div class="controls">
-                            <input name="lastName" type="text" id="lastName" size="15" maxlength="40" class="input-xlarge col-lg-12" ng-model="userProfile.lastName">
+                            <input name="lastName" type="text" id="lastName" size="15" maxlength="40" class="input-xlarge col-span-12" ng-model="userProfile.lastName">
                         </div>
                     </div>
                     <div class="control-group">
                         <label class="control-label" for="jobTitle" translate="account.profile.jobTitle"></label>
                         <div class="controls">
-                            <input name="jobTitle" type="text" size="15" maxlength="100" class="input-xlarge col-lg-12" ng-model="userProfile.jobTitle">
+                            <input name="jobTitle" type="text" size="15" maxlength="100" class="input-xlarge col-span-12" ng-model="userProfile.jobTitle">
                         </div>
                     </div>
                     <div class="control-group">
                         <label class="control-label" for="phoneNumber" translate="account.profile.phoneNumber"></label>
                         <div class="controls">
-                            <input name="phoneNumber" type="text" size="10" maxlength="20" class="input-xlarge col-lg-12" ng-model="userProfile.phoneNumber">
+                            <input name="phoneNumber" type="text" size="10" maxlength="20" class="input-xlarge col-span-12" ng-model="userProfile.phoneNumber">
                         </div>
                     </div>
                     <div class="return"></div>
@@ -71,6 +71,6 @@
                 </fieldset>
             </form>
             -->
-        </div>
+
     </div>
 </div>
