Added fetching of user data from database in profile page. Connected back end with front end. Next step is to be able to update user and see their profile picture

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -156,9 +156,12 @@
     <script src="scripts/components/language/language.service.js"></script>
     <script src="scripts/components/language/language.controller.js"></script>
     <script src="scripts/components/auth/provider/auth.xauth.service.js"></script>
+    <script src="scripts/app/account/profile/profile.controller.js"></script>
     <!-- endbuild -->
 
-        <script src="scripts/app/about/about.js"></script>
-        <script src="scripts/app/account/profile/profile.js"></script>
+    <script src="scripts/app/about/about.js"></script>
+    <script src="scripts/app/account/profile/profile.js"></script>
+    <script src="scripts/components/auth/services/user.service.js"></script>
+
 </body>
 </html>
